--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,16 +9,17 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout repository
+      uses: actions/checkout@v3
+    - name: create env file
+      run: cp .env.template .env
     - uses: actions/setup-node@v3
       with:
         node-version: 16
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npm run test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
