- update workflow to always install playwright browsers

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,9 +15,11 @@ jobs:
       run: cp .env.template .env
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 18
     - name: Install dependencies
       run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install  
     - name: Run Playwright tests
       run: npm run test
     - uses: actions/upload-artifact@v3
