update reporter and clean up custom matchers

--- a/.env.template
+++ b/.env.template
@@ -10,4 +10,7 @@ USER_SESSION_TIMEOUT_MS=600000
 S3_BUCKET="YOURS3BUCKET"
 SECRET_KEY="YOURSECRETKEYGOESHERE"
 
+# ReportPortal 3rd party reporter configuration
+RP_ENABLED=false
+RP_CONFIG={"token":"00000000-0000-0000-0000-000000000000","endpoint":"https://your.reportportal.server/api/v1","project":"Your project","launch":"Playwright test","attributes":[{"key":"key","value":"value"},{"value":"value"}],"description":"Your launch description"}
 
