--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
-      run: npx playwright install  
+      run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npm run test
     - uses: actions/upload-artifact@v3
