--- a/.github/workflows/playwright-pr.yml
+++ b/.github/workflows/playwright-pr.yml
@@ -1,16 +1,18 @@
 name: Playwright Tests
 on:
-  push:
+  pull_request:
     branches: [ main, master ]
 jobs:
   test:
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    
-    steps:
 
+    steps:
+    
     - name: checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: create env file
       run: cp .env.template .env
@@ -25,8 +27,18 @@ jobs:
     - name: install Playwright Browsers
       run: npx playwright install --with-deps
 
+    - name: create test change list per pull_request
+      if: github.event.pull_request
+      run: |
+        echo "Creating a list of tests that have changed"
+        FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep ".spec.ts" | tr '\n' ' ')
+        echo "CHANGED=$FILES" >> $GITHUB_ENV
+
     - name: run Playwright tests
-      run: npm run test
+      run: |
+        echo "CHANGED = ${{ env.CHANGED }}"
+        echo "The github event is: ${{ github.event_name }}"
+        npm run test ${{ env.CHANGED }}
 
     - uses: actions/upload-artifact@v3
       if: always()
